--- a/app/src/main/res/layout/activity_habit_setting.xml
+++ b/app/src/main/res/layout/activity_habit_setting.xml
@@ -197,7 +197,7 @@
                         android:layout_width="@dimen/_70sdp"
                         android:layout_height="@dimen/_70sdp"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:src="@drawable/ic_launcher_background"
+                        android:src="@drawable/ic_feedback"
                         app:shapeAppearanceOverlay="@style/corner" />
 
                     <TextView
