--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,18 +80,17 @@
         
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_75sdp"
+            android:layout_height="@dimen/_70sdp"
             android:background="@drawable/bck_carlendar_horiz">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_hor_calendar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_65sdp"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_5sdp"/>
+                android:layout_marginEnd="@dimen/_20sdp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
