--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -30,13 +31,14 @@
                 android:layout_height="@dimen/_150sdp"
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_marginTop="@dimen/_50sdp"
-                android:src="@drawable/ic_activity_input_tree" />
+                android:src="@drawable/ic_activity_input_tree"
+                android:contentDescription="@string/str_habit_tracker_icon" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Habit Tracker"
+                android:text="@string/str_habit_tracker"
                 android:textStyle="bold"
                 android:textSize="@dimen/_20ssp" />
 
@@ -48,9 +50,11 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:background="@drawable/bck_habit_name"
-                android:hint="Habit name"
+                android:hint="@string/str_habit_name"
                 android:maxLength="20"
-                android:gravity="center" />
+                android:gravity="center"
+                android:inputType="text"
+                android:autofillHints="username"/>
 
 
         </LinearLayout>
@@ -63,7 +67,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/_5sdp"
             android:layout_marginBottom="@dimen/_5sdp"
-            android:onClick="onClick">
+            android:onClick="onClick"
+            tools:ignore="UsingOnClickInXml">
 
             <ImageView
                 android:id="@+id/bck"
@@ -73,7 +78,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@drawable/bck_circle_white_btn" />
+                android:background="@drawable/bck_circle_white_btn"
+                android:contentDescription="@string/str_next_to_main_activity" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -82,7 +88,8 @@
                 app:layout_constraintEnd_toEndOf="@+id/btn_next"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_next"
                 app:layout_constraintStart_toStartOf="@+id/btn_next"
-                android:src="@drawable/ic_arrow_next" />
+                android:src="@drawable/ic_arrow_next"
+                android:contentDescription="@string/str_right_arrow" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
