--- a/app/src/main/res/layout/activity_create_habit.xml
+++ b/app/src/main/res/layout/activity_create_habit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -22,7 +23,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,12 +45,13 @@
                         android:layout_marginStart="@dimen/_10sdp"
                         android:layout_marginEnd="@dimen/_10sdp"
                         android:gravity="center_horizontal"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        tools:ignore="UselessParent">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_15sdp"
-                            android:text="NAME"
+                            android:text="@string/title_name_create_habit_activity"
                             android:textSize="@dimen/_10ssp"
                             android:textStyle="bold"
                             android:gravity="center"
@@ -61,16 +63,18 @@
                             android:layout_height="@dimen/_60sdp"
                             android:layout_marginTop="@dimen/_10sdp"
                             android:background="@drawable/bck_habit_name"
-                            android:hint="Habit name"
+                            android:hint="@string/str_input_habit_name"
                             android:maxLength="20"
                             android:maxLines="1"
-                            android:gravity="center"/>
+                            android:gravity="center"
+                            android:autofillHints="name"
+                            android:inputType="text"/>
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_15sdp"
                             android:layout_marginTop="@dimen/_10sdp"
-                            android:text="ICON"
+                            android:text="@string/str_icon"
                             android:textSize="@dimen/_10ssp"
                             android:textStyle="bold"
                             android:gravity="center"
@@ -90,7 +94,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_15sdp"
                             android:layout_marginTop="@dimen/_20sdp"
-                            android:text="DAY OF WEEK"
+                            android:text="@string/title_day_of_week_create_habit_activity"
                             android:textSize="@dimen/_10ssp"
                             android:textStyle="bold"
                             android:gravity="center"
@@ -110,7 +114,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="S" />
+                                android:text="@string/str_acronym_sunday"
+                                tools:ignore="ButtonStyle" />
 
                             <Button
                                 android:id="@+id/mon_date"
@@ -119,7 +124,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="M"/>
+                                android:text="@string/str_acronym_monday"
+                                tools:ignore="ButtonStyle" />
 
                             <Button
                                 android:id="@+id/tue_date"
@@ -128,7 +134,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="t"/>
+                                android:text="@string/str_acronym_tuesday"
+                                tools:ignore="ButtonStyle" />
 
                             <Button
                                 android:id="@+id/wed_date"
@@ -137,7 +144,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="w"/>
+                                android:text="@string/str_acronym_wednesday"
+                                tools:ignore="ButtonStyle" />
 
                             <Button
                                 android:id="@+id/thu_date"
@@ -146,7 +154,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="t"/>
+                                android:text="@string/str_acronym_thursday"
+                                tools:ignore="ButtonStyle" />
 
                             <Button
                                 android:id="@+id/fri_date"
@@ -155,7 +164,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="f"/>
+                                android:text="@string/str_acronym_friday"
+                                tools:ignore="ButtonStyle" />
 
                             <Button
                                 android:id="@+id/sat_date"
@@ -164,7 +174,8 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/bck_cir_date"
                                 android:onClick="@{(v) -> a.onClick(v)}"
-                                android:text="S"/>
+                                android:text="@string/str_acronym_saturday"
+                                tools:ignore="ButtonStyle" />
 
                         </LinearLayout>
 
@@ -172,7 +183,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_15sdp"
                             android:layout_marginTop="@dimen/_20sdp"
-                            android:text="TIME OF DAY"
+                            android:text="@string/title_time_of_day_create_habit_activity"
                             android:textSize="@dimen/_10ssp"
                             android:textStyle="bold"
                             android:gravity="center"
@@ -182,7 +193,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_15sdp"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:baselineAligned="false">
 
                             <LinearLayout
                                 android:id="@+id/time_any"
@@ -198,7 +210,8 @@
                                     android:id="@+id/lg_any"
                                     android:layout_width="@dimen/_16sdp"
                                     android:layout_height="@dimen/_16sdp"
-                                    android:layout_marginStart="@dimen/_15sdp"/>
+                                    android:layout_marginStart="@dimen/_15sdp"
+                                    android:contentDescription="@string/description_anytime" />
 
                                 <TextView
                                     android:id="@+id/t_anytime"
@@ -207,7 +220,7 @@
                                     android:layout_marginStart="@dimen/_30sdp"
                                     android:layout_marginBottom="@dimen/_1sdp"
                                     android:layout_marginTop="@dimen/_1sdp"
-                                    android:text="Anytime"
+                                    android:text="@string/str_anytime"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/_10ssp"/>
@@ -228,7 +241,8 @@
                                     android:id="@+id/lg_morning"
                                     android:layout_width="@dimen/_16sdp"
                                     android:layout_height="@dimen/_16sdp"
-                                    android:layout_marginStart="@dimen/_15sdp"/>
+                                    android:layout_marginStart="@dimen/_15sdp"
+                                    android:contentDescription="@string/description_morning" />
 
                                 <TextView
                                     android:id="@+id/t_morning"
@@ -237,7 +251,7 @@
                                     android:layout_marginStart="@dimen/_30sdp"
                                     android:layout_marginBottom="@dimen/_1sdp"
                                     android:layout_marginTop="@dimen/_1sdp"
-                                    android:text="Morning"
+                                    android:text="@string/str_morning"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/_10ssp"/>
@@ -251,7 +265,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_8sdp"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:baselineAligned="false">
 
                             <LinearLayout
                                 android:id="@+id/time_afternoon"
@@ -268,14 +283,15 @@
                                     android:id="@+id/lg_afternoon"
                                     android:layout_width="@dimen/_16sdp"
                                     android:layout_height="@dimen/_16sdp"
-                                    android:layout_marginStart="@dimen/_15sdp"/>
+                                    android:layout_marginStart="@dimen/_15sdp"
+                                    android:contentDescription="@string/description_afternoon" />
 
                                 <TextView
                                     android:id="@+id/t_afternoon"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_30sdp"
-                                    android:text="Afternoon"
+                                    android:text="@string/str_afternoon"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/_10ssp"/>
@@ -297,14 +313,15 @@
                                     android:id="@+id/lg_night"
                                     android:layout_width="@dimen/_16sdp"
                                     android:layout_height="@dimen/_16sdp"
-                                    android:layout_marginStart="@dimen/_15sdp"/>
+                                    android:layout_marginStart="@dimen/_15sdp"
+                                    android:contentDescription="@string/description_night" />
 
                                 <TextView
                                     android:id="@+id/t_night"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_30sdp"
-                                    android:text="Night"
+                                    android:text="@string/str_night"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/_10ssp"/>
@@ -318,7 +335,7 @@
                             android:layout_width="@dimen/_270sdp"
                             android:layout_height="@dimen/_45sdp"
                             android:layout_marginTop="@dimen/_130sdp"
-                            android:text="CREATE"
+                            android:text="@string/text_create_button"
                             android:textColor="@color/white"
                             android:textStyle="bold"
                             android:textSize="@dimen/_12ssp"
@@ -334,7 +351,8 @@
                             android:layout_gravity="left"
                             android:layout_marginTop="@dimen/_10sdp"
                             android:layout_marginStart="@dimen/_5sdp"
-                            android:onClick="@{(v) -> a.onClick(v)}">
+                            android:onClick="@{(v) -> a.onClick(v)}"
+                            tools:ignore="RtlHardcoded">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -343,7 +361,8 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                android:background="@drawable/bck_circle_white_btn"/>
+                                android:background="@drawable/bck_circle_white_btn"
+                                android:contentDescription="@string/description_left_arrow_icon" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -353,7 +372,8 @@
                                 app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                                 app:layout_constraintStart_toStartOf="@+id/btn_back"
                                 android:layout_marginEnd="@dimen/_2sdp"
-                                android:src="@drawable/ic_arrow_back" />
+                                android:src="@drawable/ic_arrow_back"
+                                android:contentDescription="@string/description_left_arrow_background" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
