--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/ll_frag_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
