Fix notify adapter

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
         <variable
             name="a"
             type="com.android.mobile_project.ui.activity.main.fragment.home.HomeFragment" />
+
         <variable
             name="vm"
             type="com.android.mobile_project.ui.activity.main.fragment.home.HomeViewModel" />
@@ -17,50 +18,50 @@
         android:id="@+id/ll_frag_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/bck_ground">
+        android:background="@color/bck_ground"
+        android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_15sdp">
 
             <TextView
                 android:id="@+id/title_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/title_date"
                 android:textSize="@dimen/_20ssp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/title_date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/title_date"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                app:layout_constraintStart_toEndOf="@id/title_month"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="@dimen/_2sdp"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:background="@drawable/btn_white_circle">
+                android:background="@drawable/btn_white_circle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/title_month"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/title_date"
-                    app:layout_constraintBottom_toBottomOf="@+id/title_date"
-                    android:layout_marginBottom="@dimen/_2sdp"
                     android:layout_marginEnd="@dimen/_1sdp"
+                    android:layout_marginBottom="@dimen/_2sdp"
                     android:textSize="@dimen/_13ssp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/title_date"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/title_date" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -69,15 +70,15 @@
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:background="@drawable/btn_plus_circle"
-                android:onClick="@{(v) -> a.onClick(v)}"
                 android:clickable="true"
+                android:focusable="true"
+                android:onClick="@{(v) -> a.onClick(v)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:focusable="true" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-        
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_70sdp"
@@ -87,10 +88,10 @@
                 android:id="@+id/rv_hor_calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"/>
+                android:layout_marginEnd="@dimen/_20sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -99,8 +100,8 @@
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
-            android:orientation="vertical"
-            android:background="@drawable/bck_habit">
+            android:background="@drawable/bck_habit"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -109,14 +110,12 @@
                 android:gravity="center"
                 android:text="@string/title_habit"
                 android:textSize="@dimen/_13ssp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <androidx.core.widget.NestedScrollView
-                android:id="@+id/layout_scroll_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_10sdp"
-                android:fillViewport="true"
                 android:scrollbars="none">
 
                 <LinearLayout
@@ -128,97 +127,108 @@
                         android:id="@+id/t_todo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginEnd="@dimen/_8sdp"
+                        android:background="#E0E0E0"
+                        android:gravity="center"
+                        android:onClick="@{(v) -> a.onClick(v)}"
                         android:text="@string/title_to_do_list"
                         android:textSize="@dimen/_10ssp"
                         android:textStyle="bold"
-                        android:background="#E0E0E0"
-                        android:visibility="gone"
-                        android:gravity="center"
-                        android:onClick="@{(v) -> a.onClick(v)}"/>
+                        android:visibility="gone" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rcv_habit_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:nestedScrollingEnabled="false"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
-                    <TextView
-                        android:id="@+id/t_done"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:text="@string/title_done"
-                        android:textSize="@dimen/_10ssp"
-                        android:textStyle="bold"
-                        android:background="#E0E0E0"
-                        android:visibility="gone"
-                        android:gravity="center"
-                        android:onClick="@{(v) -> a.onClick(v)}"/>
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rcv_habit_done_list"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:nestedScrollingEnabled="false"
-                        android:visibility="gone"/>
+                        <TextView
+                            android:id="@+id/t_done"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:background="#E0E0E0"
+                            android:gravity="center"
+                            android:onClick="@{(v) -> a.onClick(v)}"
+                            android:text="@string/title_done"
+                            android:textSize="@dimen/_10ssp"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rcv_habit_done_list"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:visibility="gone" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/t_failed"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_8sdp"
+                                android:layout_marginTop="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_8sdp"
+                                android:background="#E0E0E0"
+                                android:gravity="center"
+                                android:onClick="@{(v) -> a.onClick(v)}"
+                                android:text="@string/title_failed"
+                                android:textSize="@dimen/_10ssp"
+                                android:textStyle="bold"
+                                android:visibility="gone" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rcv_habit_failed_list"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginTop="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_10sdp"
+                                android:visibility="gone" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rcv_before"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginTop="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_10sdp"
+                                android:visibility="gone" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rcv_after"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginTop="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_10sdp"
+                                android:visibility="gone" />
 
 
-                    <TextView
-                        android:id="@+id/t_failed"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:text="@string/title_failed"
-                        android:textSize="@dimen/_10ssp"
-                        android:textStyle="bold"
-                        android:background="#E0E0E0"
-                        android:visibility="gone"
-                        android:gravity="center"
-                        android:onClick="@{(v) -> a.onClick(v)}"/>
+                        </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rcv_habit_failed_list"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:nestedScrollingEnabled="false"
-                        android:visibility="gone"/>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rcv_before"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:nestedScrollingEnabled="false"
-                        android:visibility="gone"/>
+                    </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rcv_after"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:nestedScrollingEnabled="false"
-                        android:visibility="gone"/>
 
                 </LinearLayout>
 
